modify gradle file

--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,9 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
 
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.4'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
+//        classpath 'com.novoda:bintray-release:+' // 新增
     }
 }
 
@@ -23,6 +24,11 @@ allprojects {
         jcenter()
         
     }
+
+//    tasks.withType(Javadoc) { // 新增
+//        options.addStringOption('Xdoclint:none', '-quiet')
+//        options.addStringOption('encoding', 'UTF-8')
+//    }
 }
 
 task clean(type: Delete) {
